--- a/pages/succes.html
+++ b/pages/succes.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <iframe src="../layouts/header.html" scrolling="no" width="100%"></iframe>
+    <iframe frameborder="0" src="../layouts/header.html" scrolling="no" width="100%"></iframe>
     <div id="blabla">
         <img src="../assets/images/icone-certificado.png" alt="Símbolo de aprovação" width="120" height="120">
         <h1>Formulário enviado com sucesso!</h1>
