--- a/pages/contato.html
+++ b/pages/contato.html
@@ -9,7 +9,7 @@
     <iframe src="../layouts/header.html" frameborder="0" scrolling="0"></iframe>
     <h1> Entre em contato</h1>
 
-    <form action="../pages/sucess.html">
+    <form action="../pages/succes.html">
         <label>Nome:</label><input class="divtotazzi" type="text" required placeholder="digite seu nome"></div>
         <label>E-mail:</label><input class="divtotazzi" type="email" required placeholder="digite seu e-mail"></div>
     <label>Mensagem</label><input class="divform" type="text" required placeholder="deixe uma mensagem"></div>
