--- a/pages/sobre.html
+++ b/pages/sobre.html
@@ -107,7 +107,8 @@
             </section>
         </div>
     </article>
-    <iframe src="../layouts/footer.html" frameborder="0" scrolling="no" width="100%"></iframe>
+    <footer>
+        <iframe src="../layouts/footer.html" frameborder="0" scrolling="no" width="100%" height="100px"></iframe>
+    </footer>
 </body>
-
 </html>
