--- a/pages/contato.html
+++ b/pages/contato.html
@@ -2,17 +2,18 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="../assets/css/contato.css">   
+    <link rel="stylesheet" href="../assets/css/contato.css">
+    <link rel="icon" type="imagem/x-icon" href="../assets/images/logo.png">
     <title>Topazzi</title>
 </head>
 <body>
     <iframe src="../layouts/header.html" frameborder="0" scrolling="0"></iframe>
-    <h1> Entre em contato</h1>
+    <h1>Contacte-nos:</h1>
 
     <form action="../pages/succes.html">
         <label>Nome:</label><input class="divtotazzi" type="text" required placeholder="digite seu nome"></div>
         <label>E-mail:</label><input class="divtotazzi" type="email" required placeholder="digite seu e-mail"></div>
-    <label>Mensagem</label><input class="divform" type="text" required placeholder="deixe uma mensagem"></div>
+    <label>Mensagem</label><input class="divform" type="password" required placeholder="manda uma Mensagem" required minlength="10"> </div>
         <input id="submit" type="submit"></div>
     </form>
     <footer><iframe src="../layouts/footer.html" frameborder="0" scrolling="0"></iframe></footer>
