--- a/Index.html
+++ b/Index.html
@@ -5,13 +5,13 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="assets/css/style.Index.css">
     <link rel="icon" type="imagem/x-icon" href="assets/images/logo.png">
-    <title>Topazzi</title>
+    <title>SEKIEI</title>
 </head>
 
 <body>
     <iframe src="./layouts/header.html" frameborder="0" scrolling="no" width="100%"></iframe>
     <div id="title_site">
-    <h1 id="h1_1"> Topazzi </h1>
+    <h1 id="h1_1"> SEKIEI </h1>
     <p id="p_1"> A melhor gastronomia asática</p>
     </div>
     <section id="menu">
