--- a/pages/contato.html
+++ b/pages/contato.html
@@ -13,7 +13,7 @@
     <form action="../pages/succes.html">
         <label>Nome</label><input class="divsekiei" type="text" required placeholder="digite seu nome"></div>
         <label>E-mail</label><input class="divsekiei" type="email" required placeholder="digite seu e-mail"></div>
-    <label id="mensagem">Mensagem</label><input class="divform" type="password" required placeholder="manda uma Mensagem" required minlength="10"> </div>
+    <label id="mensagem">Mensagem</label><input class="divform" type="text" required placeholder="manda uma Mensagem" required minlength="10"> </div>
         <input id="submit" type="submit"></div>
     </form>
     <footer><iframe src="../layouts/footer.html" frameborder="0" scrolling="0"></iframe></footer>
