--- a/pages/succes.html
+++ b/pages/succes.html
@@ -3,12 +3,12 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Topazzi</title>
+    <title>Sekiei</title>
     <link rel="stylesheet" href="../assets/css/succes.css"> 
 </head>
 
 <body>
-    <iframe frameborder="0" src="../layouts/header.html" scrolling="no" width="100%"></iframe>
+    <iframe frameborder="0" src="../layouts/header.html" scrolling="no" width="100%" height="115px"></iframe>
     <div id="blabla">
         <img src="../assets/images/icone-certificado.png" alt="Símbolo de aprovação" width="120" height="120">
         <h1>Formulário enviado com sucesso!</h1>
