--- a/pages/sobre.html
+++ b/pages/sobre.html
@@ -4,14 +4,15 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="../assets/css/sobre.css">
-    <title>Topazzi</title>
+    <link rel="icon" type="imagem/x-ixon" href="../assets/images/icon.png">
+    <title>SEKIEI</title>
 </head>
 
 <body>
-    <iframe src="../layouts/header.html" frameborder="0" scrolling="no" width="100%" height="100%"></iframe>
+    <iframe src="../layouts/header.html" frameborder="0" scrolling="no" width="100%" height="115px"></iframe>
     <div id="banner">
-        <h1 id="title">Topazzi</h1>
-        <img src="../assets/images/topazzi_banner.png" alt="banner do restaurante" width="90%">
+        <h1 id="title">SEKIEI</h1>
+        <img src="../assets/images/3b42a76c1f8cb53ab080b73f4f533743.jpg" alt="banner do restaurante" width="95%" height="">
     </div>
     <article id="article_main">
         <h1 class="title2">Sobre nós</h1>
