--- a/Index.html
+++ b/Index.html
@@ -14,13 +14,12 @@
     <h1 id="h1_1"> SEKIEI </h1>
     <p id="p_1"> A melhor gastronomia asática</p>
     </div>
-    <section id="menu">
-        <h1>Menu</h1>
     </section>
     <div>
         <main>
             <article id="article_1">
-                <h1>Promoção premium Topazzi</h1>
+                <h1 id="promosikiei">Promoção premium Sikiei</h1>
+                <h4 id="promosikiei_2">Futomaki</h4>
                 <section id="section_1">
                     <img src="assets/images/Promo Topazzi.jpg" alt="Promo do dia" width="300px"
                         height="250px">
@@ -43,7 +42,7 @@
     </div>
     <article class="articles">
         <section class="sections"">
-            <h3>Combo 1</h3>
+            <h3>Combo Hossomaki</h3>
             <div class="images">
             <img src="assets/images/Combo_1.webp" alt="combo_1" width="200px" height="150px"> </div>
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Iure quia adipisci dolore harum consequatur,
@@ -51,7 +50,7 @@
                 quo!</p>
         </section>
         <section class="sections">
-            <h3>Combo 2</h3>
+            <h3>Combo Urumaki</h3>
             <div class="images">
             <img src="assets/images/Combo_2.jpg" alt="combo_1" width="200px" height="150px"> </div>
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Exercitationem fugit ullam, ratione sed iure ab
@@ -59,7 +58,7 @@
                 Fugiat, excepturi?</p>
         </section>
         <section class="sections">
-            <h3>Combo 3</h3>
+            <h3>Combinado</h3>
             <div class="images">
             <img src="assets/images/combo_3.webp" alt="como_3" width="200px" height="150px"> </div>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta, illum voluptates dolores odio saepe
@@ -69,7 +68,7 @@
     </article>
     <article class="articles">
         <section class="sections_2">
-            <h3>Combo 4</h3>
+            <h3>Combo de Nigiri</h3>
             <div class="images">
             <img src="assets/images/combo_4.webp" alt="combo_4" width="200px" height="150px"></div>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus asperiores nesciunt iure vero,
@@ -77,7 +76,7 @@
                 obcaecati incidunt!</p>
         </section>
         <section class="sections_2">
-        <h3>Combo 5</h3>
+        <h3>Barca completa</h3>
         <div class="images">
         <img src="assets/images/combo_5.jpg" alt="combo_4" width="200px" height="150px"></div>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus asperiores nesciunt iure vero, eveniet
@@ -85,7 +84,7 @@
             incidunt!</p>
         </section>
         <section class="sections_2">
-        <h3>Combo 6</h3>
+        <h3>Califórnia Roll</h3>
         <div class="images">
         <img src="assets/images/combo_6.jpg" alt="combo_4" width="200px" height="150px"></div>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus asperiores nesciunt iure vero, eveniet
@@ -95,7 +94,7 @@
     </article>
     <article class="articles">
         <section class="sections_2">
-            <h3>Combo 7</h3>
+            <h3>Combo de Hotroll</h3>
             <div class="images">
             <img src="assets/images/combo_7.jfif" alt="combo_4" width="200px" height="150px"></div>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus asperiores nesciunt iure vero,
@@ -103,7 +102,7 @@
                 obcaecati incidunt!</p>
         </section>
         <section class="sections_2">
-            <h3>Combo 8</h3>
+            <h3>Combo de Sashimi</h3>
             <div class="images">
             <img src="assets/images/combo_8.jpg" alt="combo_4" width="200px" height="150px"></div>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus asperiores nesciunt iure vero,
@@ -111,7 +110,7 @@
                 obcaecati incidunt!</p>
         </section>
         <section class="sections_2">
-            <h3>Combo 9</h3>
+            <h3>Temaki</h3>
             <div class="images">
             <img src="assets/images/combo_9.jpg" alt="combo_4" width="200px" height="150px"></div>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus asperiores nesciunt iure vero,
