--- a/Index.html
+++ b/Index.html
@@ -9,16 +9,16 @@
 </head>
 
 <body>
-    <iframe src="./layouts/header.html" frameborder="0" scrolling="no" width="100%"></iframe>
+    <iframe src="./layouts/header.html" frameborder="0" scrolling="no" width="100%" height="115px"></iframe>
     <div id="title_site">
     <h1 id="h1_1"> SEKIEI </h1>
-    <p id="p_1"> A melhor gastronomia asática</p>
+    <p id="p_1"> A melhor gastronomia oriental</p>
     </div>
     </section>
     <div>
         <main>
             <article id="article_1">
-                <h1 id="promosikiei">Promoção premium Sikiei</h1>
+                <h1 id="promosikiei">Promoção premium SEKIEI</h1>
                 <h4 id="promosikiei_2">Futomaki</h4>
                 <section id="section_1">
                     <img src="assets/images/Promo Topazzi.jpg" alt="Promo do dia" width="300px"
