--- a/pages/succes.html
+++ b/pages/succes.html
@@ -11,10 +11,10 @@
     <iframe frameborder="0" src="../layouts/header.html" scrolling="no" width="100%" height="115px"></iframe>
     <div id="blabla">
         <img src="../assets/images/icone-certificado.png" alt="Símbolo de aprovação" width="120" height="120">
-        <h1>Formulário enviado com sucesso!</h1>
+        <h1>Mensagem enviada com sucesso!</h1>
         <div id="espaco"></div>
         <div>
-            <a href="../Index.html" target="_parent"><button id="botao">Volte para home</button></a>
+            <a href="../Index.html" target="_parent"><button id="botao">Voltar para MENU</button></a>
         </div>
     </div>
     <iframe  id="iframeFooter" src="./../layouts/footer.html" scrolling="no" height="100px" width="100%" frameborder="0"></iframe>
