--- a/Index.html
+++ b/Index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="assets/css/style.Index.css">
-    <link rel="icon" type="imagem/x-icon" href="assets/images/logo.png">
+    <link rel="icon" type="imagem/x-icon" href="../assets/images/icon.png">
     <title>SEKIEI</title>
 </head>
 
