--- a/pages/contato.html
+++ b/pages/contato.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="../assets/css/contato.css">
-    <link rel="icon" type="imagem/x-icon" href="../assets/images/logo.png">
+    <link rel="icon" type="imagem/x-icon" href="../assets/images/icon.png">
     <title>SEKIEI</title>
 </head>
 <body>
