--- a/pages/succes.html
+++ b/pages/succes.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Sekiei</title>
+    <title>SEKIEI</title>
     <link rel="stylesheet" href="../assets/css/succes.css">
     <link rel="icon" type="image/x-icon" href="../assets/images/icon.png">
 </head>
