--- a/pages/succes.html
+++ b/pages/succes.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Sekiei</title>
-    <link rel="stylesheet" href="../assets/css/succes.css"> 
+    <link rel="stylesheet" href="../assets/css/succes.css">
+    <link rel="icon" type="imagem/x-icon" href="../assets/images/icon.png">
 </head>
 
 <body>
